Don't fire onLocationChange for initial loads in subframes; reverts old behavior.  Bug 285738, patch by William A. Gianopoulos <wgianopoulos@yahoo.com>, r=jst, sr=bzbarsky